Cros splitscreen - Adjust the snapped window bounds if the available area for snapped window is smaller than the minimum bounds.

Bug: 787150
Change-Id: Ib4596276467a62f8b25c192dece808079460b808
Reviewed-on: https://chromium-review.googlesource.com/780660
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519466}
Former-commit-id: 928f69cc5e9a02093a393a663d6be0405558e6af