ash/wm/overview/window_selector_unittest.cc
@@ -1957,6 +1957,15 @@ class SplitViewWindowSelectorTest : public WindowSelectorTest {
     return window;
   }
 
+  aura::Window* CreateWindowWithMinimumSize(const gfx::Rect& bounds,
+                                            const gfx::Size& size) {
+    SplitViewTestWindowDelegate* delegate = new SplitViewTestWindowDelegate();
+    aura::Window* window =
+        CreateTestWindowInShellWithDelegate(delegate, -1, bounds);
+    delegate->set_minimum_size(size);
+    return window;
+  }
+
   gfx::Rect GetSplitViewLeftWindowBounds(aura::Window* window) {
     return split_view_controller()->GetSnappedWindowBoundsInScreen(
         window, SplitViewController::LEFT);
@@ -2816,6 +2825,70 @@ TEST_F(SplitViewWindowSelectorTest, WindowSelectorItemLongPressed) {
   window_selector()->ActivateDraggedWindow();
   EXPECT_FALSE(window_selector_controller()->IsSelecting());
   EXPECT_EQ(window1.get(), wm::GetActiveWindow());
+}
+
+TEST_F(SplitViewWindowSelectorTest, SnappedWindowBoundsTest) {
+  const gfx::Rect bounds(0, 0, 400, 400);
+  const int kMinimumBoundSize = 100;
+  const gfx::Size size(kMinimumBoundSize, kMinimumBoundSize);
+
+  std::unique_ptr<aura::Window> window1(
+      CreateWindowWithMinimumSize(bounds, size));
+  std::unique_ptr<aura::Window> window2(
+      CreateWindowWithMinimumSize(bounds, size));
+  std::unique_ptr<aura::Window> window3(
+      CreateWindowWithMinimumSize(bounds, size));
+  ToggleOverview();
+
+  // Drag |window1| selector item to snap to left.
+  const int grid_index = 0;
+  WindowSelectorItem* selector_item1 =
+      GetWindowItemForWindow(grid_index, window1.get());
+  DragWindowTo(selector_item1, gfx::Point(0, 0));
+  EXPECT_EQ(SplitViewController::LEFT_SNAPPED,
+            split_view_controller()->state());
+  EXPECT_TRUE(Shell::Get()->window_selector_controller()->IsSelecting());
+
+  // Then drag the divider to left toward closing the snapped window.
+  gfx::Rect divider_bounds = GetSplitViewDividerBounds(false /*is_dragging=*/);
+  split_view_controller()->StartResize(divider_bounds.CenterPoint());
+  // Drag the divider to a point that is close enough but still have a short
+  // distance to the edge of the screen.
+  split_view_controller()->EndResize(gfx::Point(20, 20));
+
+  // Test that split view mode is ended. Overview mode is still active.
+  EXPECT_FALSE(split_view_controller()->IsSplitViewModeActive());
+  EXPECT_TRUE(Shell::Get()->window_selector_controller()->IsSelecting());
+  // Test that |window1| has been moved out of the work area and is invisible.
+  EXPECT_LE(window1->bounds().x(), -kMinimumBoundSize);
+  EXPECT_EQ(window1->bounds().width(), kMinimumBoundSize);
+
+  // Drag |window2| selector item to snap to right.
+  WindowSelectorItem* selector_item2 =
+      GetWindowItemForWindow(grid_index, window2.get());
+  const gfx::Rect work_area_rect =
+      split_view_controller()->GetDisplayWorkAreaBoundsInScreen(window2.get());
+  gfx::Point end_location2 =
+      gfx::Point(work_area_rect.width(), work_area_rect.height());
+  DragWindowTo(selector_item2, end_location2);
+  EXPECT_EQ(SplitViewController::RIGHT_SNAPPED,
+            split_view_controller()->state());
+  EXPECT_TRUE(Shell::Get()->window_selector_controller()->IsSelecting());
+
+  // Then drag the divider to right toward closing the snapped window.
+  divider_bounds = GetSplitViewDividerBounds(false /* is_dragging */);
+  split_view_controller()->StartResize(divider_bounds.CenterPoint());
+  // Drag the divider to a point that is close enough but still have a short
+  // distance to the edge of the screen.
+  end_location2.Offset(-20, -20);
+  split_view_controller()->EndResize(end_location2);
+
+  // Test that split view mode is ended. Overview mode is still active.
+  EXPECT_FALSE(split_view_controller()->IsSplitViewModeActive());
+  EXPECT_TRUE(Shell::Get()->window_selector_controller()->IsSelecting());
+  // Test that |window2| has been moved out of the work area and is invisible.
+  EXPECT_GE(window2->bounds().x(), work_area_rect.x());
+  EXPECT_EQ(window2->bounds().width(), kMinimumBoundSize);
 }
 
 }  // namespace ash
